[package]
name = "reqrnpdno"
version = "0.1.0"
authors = ["Irving Morales <irvingfisica@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.4", features = ["blocking", "cookies", "json"]}
serde = "1.0"
serde_urlencoded = "0.7"
serde_json = "1.0"
scraper = "0.12.0"