[package]
name = "reqrnpdno"
license = "MIT"
version = "0.1.3"
authors = ["Irving Morales <irvingfisica@gmail.com>"]
description = "Crate para consumir los datos públicos de desaparecidos en México"
repository = "https://github.com/irvingfisica/reqrnpdno"
edition = "2018"
exclude = [
    "salida/*",
    "imagenes/*",
    "datos_procesados/*",
    ".DS_Store",
    "datos.json",
    "diccionarios/*"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.4", features = ["blocking", "cookies", "json"]}
serde = "1.0"
serde_urlencoded = "0.7"
serde_json = "1.0"
scraper = "0.12.0"